appId: com.mulaisekarang.app
name: Login as instructor
---
- launchApp:
    clearState: true
- assertVisible:
    id: "email_input"
- tapOn:
    id: "email_input"
- inputText: "budi@mulaisekarang.com"
- tapOn:
    id: "password_input"
- inputText: "password"
- hideKeyboard
- tapOn:
    id: "login_button"
# Landed on Beranda (home) after successful login.
- assertVisible:
    text: "BERANDA"
